src/test/ui/feature-gate-clone-closures.stderr
error[E0599]: no method named `clone` found for type `[closure@$DIR/feature-gate-clone-closures.rs:16:17: 18:6 a:_]` in the current scope
  --> $DIR/feature-gate-clone-closures.rs:20:23
   |
20 |     let hello = hello.clone(); //~ ERROR no method named `clone` found for type
   |                       ^^^^^
   |
   = note: hello is a function, perhaps you wish to call it

error: aborting due to previous error

